register page and regiser function added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,8 +8,12 @@
     <string name="analyze_new_video">Analizar nuevo video</string>
     <string name="new_routine">Nueva rutina</string>
     <string name="login_welcome_text" translatable="false">Bienvenido de nuevo</string>
+    <string name="register_welcome_text" translatable="false">Crea una Cuenta</string>
     <string name="login_button">Iniciar Sesión</string>
+    <string name="register_button">Registrarse</string>
     <string name="separator"> o </string>
     <string name="register_suggest" translatable="false">¿Todavía no tienes una cuenta?</string>
     <string name="register_link" translatable="false">Registrarse</string>
+    <string name="login_suggest" translatable="false">¿Ya tienes una cuenta?</string>
+    <string name="login_link" translatable="false">Iniciar sesión</string>
 </resources>
