--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">TFT-Gym-App</string>
     <string name="my_data">My Data</string>
     <string name="favoriote_videos">Favourite Videos</string>
@@ -9,8 +9,12 @@
     <string name="analyze_new_video">Analyze new video</string>
     <string name="new_routine">New routine</string>
     <string name="login_welcome_text" translatable="false">Welcome back</string>
+    <string name="register_welcome_text" translatable="false">Create an Account</string>
     <string name="login_button">Login</string>
+    <string name="register_button">Register</string>
     <string name="separator"> or </string>
     <string name="register_suggest">Don`t have an account yet?</string>
     <string name="register_link" translatable="false">Register</string>
+    <string name="login_suggest" translatable="false">Already have an account?</string>
+    <string name="login_link" translatable="false">Login</string>
 </resources>
