--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="register_link" translatable="false">Registrarse</string>
     <string name="login_suggest" translatable="false">¿Ya tienes una cuenta?</string>
     <string name="login_link" translatable="false">Iniciar sesión</string>
+    <string name="log_out" translatable="false">Cerrar sesión</string>
 </resources>
