conected api with GymApp and testing if the requesta and thes responses ar good

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -20,4 +20,7 @@
     <string name="log_out" translatable="false">Log out</string>
     <string name="delete_user" translatable="false">Delete User</string>
     <string name="upload_video" translatable="false">Upload Video</string>
+    <string name="dead_lift" translatable="false">Dead Lift</string>
+    <string name="bench_press" translatable="false">Bench Press</string>
+    <string name="squad" translatable="false">Squad</string>
 </resources>
