--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="login_link" translatable="false">Iniciar sesión</string>
     <string name="log_out" translatable="false">Cerrar sesión</string>
     <string name="delete_user" translatable="false">Eliminar usuario</string>
-    <string name="upload_video" translatable="false">Sube video</string>
+    <string name="upload_video" translatable="false">Sube un video</string>
     <string name="dead_lift" translatable="false">Peso Muerto</string>
     <string name="bench_press" translatable="false">Press de Banca</string>
     <string name="squad" translatable="false">Sentadilla</string>
@@ -35,4 +35,5 @@
     <string name="accept" translatable="false">Aceptar</string>
     <string name="gender" translatable="false">Género</string>
     <string name="birthdate" translatable="false">Fecha de nacimiento</string>
+    <string name="analyze" translatable="false">Analizar</string>
 </resources>
