finish the history view, add, delete, an edit works now, chart view is finish, the selector to last 7 days, month, etc its works, and modifing user profile base on firebase data

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -43,4 +43,6 @@
     <string name="repetitions" translatable="false">Repetitions</string>
     <string name="rm" translatable="false">Maximum Repetition</string>
     <string name="add" translatable="false">Add On</string>
+    <string name="CompletePrifile" translatable="false">Complete your profile to view more information</string>
+    <string name="personalRecords" translatable="false">Personal Records</string>
 </resources>
