--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <string name="gemini_api_key">AIzaSyCR1PeUmiD8jkSlGytWI4DfOEkDthqS3zo</string>
     <string name="app_name">TFT-Gym-App</string>
     <string name="my_data">Mis Datos</string>
     <string name="favoriote_videos">Videos Favoritos</string>
